# Customer_Support_Chatbot

./: .env.template  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  setup_database.py
config/: config.yaml
frontend/: README.md  index.html
prompt_library/: prompt.py
retriever/: retrieval.py
tests/: README.md  conftest.py  test_config_loader.py  test_data_ingestion.py  test_main.py  test_model_loader.py  test_prompt_library.py  test_retrieval.py  test_setup_database.py
utils/: model_loader.py
