[project]
name = "customer-support-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-astradb",
    "pandas",
    "langchain-google-genai",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langchain-groq",
    "aiofiles",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
